# tiny-nl2sql

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
dataset/: tables.yaml
prompts/: prompts.yaml
scripts/: download_dataset.py  populate_db.py
src/: main.py
src/agents/: enums.py  graph.py  nodes.py  nodes_enum.py  state.py
src/api/: chat.py  models.py  schemas.py
src/services/: schema_loader.py
src/utils/: consts.py  utils.py
